# Advent-of-Code-2020

./: .gitignore  CMakeLists.txt  README.md  new_day.sh
1/: .gitignore  day1.cpp  utils.cpp  utils.h
10/: day10.cpp  day10_2.cpp
11/: day11.cpp  day11v2_part2.cpp  utils.cpp
12/: day12.cpp  day12_2.cpp
13/: day13.cpp  day13_part2.cpp
14/: day14.cpp
15/: README.md  day15-benchmark.xlsx  day15.cpp
16/: README.md  day16.cpp  my_ticket
17/: README.md  day17.cpp  day17part2.cpp
2/: day2.cpp  day2_2.cpp
3/: day3.cpp
4/: day4.cpp
5/: day5.cpp
6/: day6.cpp  day6_2.cpp  utils.h
7/: day7.cpp
8/: day8.cpp  utils.cpp
9/: day9.cpp  utils.h
day_01/: README.md  day1.cpp
day_02/: day2.cpp  day2_2.cpp
day_03/: README.md
day_04/: day4.cpp
day_05/: README.md
day_10/: day10.cpp  day10_2.cpp
day_11/: day11v2.cpp
day_12/: day12_2.cpp
day_13/: day13.cpp
day_15/: day15v2.cpp  day15v3.cpp
day_16/: day16_no_regex.cpp  day16part2.cpp
day_18/: day_18.cpp  day_18_part2.cpp
day_19/: day_19.cpp
day_20/: README.md  day_20.cpp
day_21/: day_21.cpp
day_22/: README.md  day_22.cpp
day_23/: README.md  day_23.cpp  day_23_list.cpp  day_23_part2.cpp
day_24/: README.md  day_24.cpp
day_25/: day_25.cpp
utils/: math_func.cpp  math_func.h  utils.cpp  utils.h
week_1/day_01/: day1.cpp  day_01.cpp
week_1/day_02/: README.md  day2.cpp  day2_2.cpp  day_02.cpp
week_1/day_03/: day3.cpp  day_03.cpp
week_1/day_04/: README.md  day4.cpp  day_04.cpp
week_1/day_05/: day5.cpp  day_05.cpp
week_1/day_06/: README.md  day6.cpp  day6_2.cpp  day_06.cpp
week_1/day_07/: day7.cpp  day_07.cpp
week_2/day_08/: day8.cpp  day_08.cpp
week_2/day_09/: day9.cpp  day_09.cpp
week_2/day_10/: day10.cpp  day_10.cpp
week_2/day_11/: day11.cpp  day11_part2.cpp  day_11.cpp
week_2/day_12/: day12.cpp  day12_2.cpp  day_12.cpp
week_2/day_13/: day13.cpp  day13_part2.cpp  day_13.cpp
week_2/day_14/: day14.cpp  day_14.cpp
week_3/day_15/: README.md  day15.cpp  day15v2.cpp  day15v3.cpp  day_15.cpp
week_3/day_16/: README.md  day16.cpp  day16part2.cpp  day_16.cpp
week_3/day_17/: day17.cpp  day17part2.cpp  day_17.cpp
week_3/day_18/: README.md  day_18.cpp  day_18_part2.cpp
week_3/day_19/: README.md  day_19.cpp  rules2
week_3/day_20/: day_20.cpp
week_3/day_21/: README.md  day_21.cpp
week_4/day_22/: day_22.cpp
week_4/day_23/: README.md  day_23.cpp  day_23_list.cpp  day_23_part2.cpp
week_4/day_24/: day_24.cpp
week_4/day_25/: README.md  day_25.cpp
